github gitbash atom complete

--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -1,8 +1,9 @@
 h1 {
-  color: red;
+  color: white ;
 }
 
 body {
-  background-color: blue;
-}
+  background-color: teal;
+  font-size: 14;
+  font-family: helvetica;
 }
